--- a/style.css
+++ b/style.css
@@ -8,3 +8,26 @@ body {
     font-style: italic;
     color: #373fff;
   }
+
+  .tooltip{
+    padding: 10px;
+    position: fixed;
+    display: none;
+    background-color: rgb(218, 206, 186);
+    color: white;
+    border-radius: 5px;
+    opacity: 80%;
+}
+
+.axis path,
+.axis line { 
+	fill: none;
+	stroke: #333;
+	shape-rendering: crispEdges;
+}
+
+/* labels */
+.axis text {
+	font-family: sans-serif;
+	font-size: 13px;
+}
